--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@ description: > # this means to ignore newlines until "baseurl:"
   Stay tuned for a whole lot of nothing, i guess...
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: mthsmcrds
+twitter_username: cardosodev
 github_username:  cardoso
 
 # Build settings
