--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 title: cardoso
-email: matheusmcrds@gmail.com
+email: matheus@cardo.so
 description: > # this means to ignore newlines until "baseurl:"
   Stay tuned for a whole lot of nothing, i guess...
 baseurl: "" # the subpath of your site, e.g. /blog
