--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@
 title: cardoso
 email: matheus@cardo.so
 description: > # this means to ignore newlines until "baseurl:"
-  Stay tuned for a whole lot of nothing, i guess...
+  Feel free to reach out!
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: cardosodev
