--- a/_config.yml
+++ b/_config.yml
@@ -52,9 +52,9 @@ youtube_username: jekyll
 # about_title: About Me (Use this to override about section title)
 about_profile_image: images/profile.jpg
 about_content: | # this will include new lines to allow paragraphs
- Hi. I'm Matheus Cardoso! I'm a developer and Open Source enthusiast based in Brazil.
+ Hi! 👋 I'm Matheus Cardoso. I'm a Developer Advocate and Technical Writer.
 
- I've been a recurring speaker in international events such as AltConf in 2018 and 2019, DeveloperWeek in 2021, and a recurring speaker at local and national events such as CocoaHeads, Pytalks and TDC, sharing knowledge and spreading the word about Open Source.
+ I've been a recurring speaker at worldwide events such as **[AltConf](https://altconf.com)** in 2018 and 2019, **[DeveloperWeek](https://developerweek.com)** and **[Swift Heroes](https://swiftheroes.com)** in 2021, 
 
  I was also a mentor for Google Summer of Code in 2018 and Admin in 2019, having attended the 2018 summit in Sunnyvale, California and the 2019 summit in Munich, Germany.
 
