--- a/_config.yml
+++ b/_config.yml
@@ -54,9 +54,9 @@ about_profile_image: images/profile.jpg
 about_content: | # this will include new lines to allow paragraphs
  Hi! 👋 I'm Matheus Cardoso. I'm a Developer Advocate and Technical Writer.
 
- I've been a recurring speaker at worldwide events such as **[AltConf](https://altconf.com)** in 2018 and 2019, **[DeveloperWeek](https://developerweek.com)** and **[Swift Heroes](https://swiftheroes.com)** in 2021, 
+ I've been a recurring speaker at worldwide events such as **[AltConf](https://altconf.com)**, **[DeveloperWeek](https://developerweek.com)**, and **[Swift Heroes](https://swiftheroes.com)**. 
 
- I was also a mentor for Google Summer of Code in 2018 and Admin in 2019, having attended the 2018 summit in Sunnyvale, California and the 2019 summit in Munich, Germany.
+ I'm also a mentor and admin for **[Google Summer of Code](https://summerofcode.withgoogle.com)**, having attended summits held in Sunnyvale, California and in Munich, Germany.
 
 content:
   - title: Projects # Title for the section
