--- a/_config.yml
+++ b/_config.yml
@@ -62,6 +62,8 @@ about_content: | # this will include new lines to allow paragraphs
 
  As a huge fan of Apple platforms, I've developed several libraries and applications written in **Swift** and **Objective-C**, and I've won the **WWDC Scholarship** prize.
 
+ You can speak to me in English 🇺🇸, German 🇩🇪, and Portuguese 🇧🇷.
+
 content:
   - title: A Little More About Me
     layout: text
