--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
   "type": "module",
   "private": true,
   "devDependencies": {
-    "vitepress": "^2.0.0-alpha.2"
+    "vitepress": "^2.0.0-alpha.2",
+    "typescript": "^5.7.3",
+    "vue": "^3.5.13"
   },
   "scripts": {
     "dev": "vitepress dev",
