chore: customize layout

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,4 +1,9 @@
 {
+  "vueCompilerOptions": {
+    "vitePressExtensions": [
+      ".md"
+    ]
+  },
     "compilerOptions": {
       // Most non-library projects don't need to emit declarations.
       // So we add this option by default to make the config more friendly to most users.
