--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,7 @@
 {
     "typescript.tsdk": "node_modules/typescript/lib",
-    
+    "vue.server.includeLanguages": [
+        "vue",
+        "markdown"
+    ]
 }
