chore: default formatter

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,5 +3,8 @@
     "vue.server.includeLanguages": [
         "vue",
         "markdown"
-    ]
+    ],
+    "[vue]": {
+        "editor.defaultFormatter": "Vue.volar"
+    },
 }
