chore: move data loader

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -59,5 +59,9 @@
       "forceConsistentCasingInFileNames": true,
       // See <https://github.com/vuejs/vue-cli/pull/5688>
       "skipLibCheck": true,
-    }
+    },
+    "include": [
+      ".vitepress/**/*",
+      "**/*.md"
+    ]
   }
